@@ -1,5 +1,10 @@
 2005-04-22  Philippe Gerum  <rpm@xenomai.org>
 
+	* include/nucleus/asm-generic/syscall.h: Add conforming domain
+	exec bit, ensuring that calling shadows are switched to primary
+	mode before entering the syscall, whilst the latter is fired over
+	the Linux domain for regular Linux tasks.
+
 	* skins/psos+/demos, skins/vxworks/demos: Create per-skin demo
 	directory, illustrating the use of the RTOS emulators over the UVM
 	and simulator engines.
